@@ -7,10 +7,9 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:7.4.2'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
         classpath 'com.google.gms:google-services:4.3.15'
-        classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -31,4 +30,9 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+tasks.withType(JavaCompile) {
+    options.compilerArgs += [
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
+    ]
 }
